--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "my first project in Yandex Practicum",
   "scripts": {
-    "dev": "parcel index.hbs",
-    "build": "parcel build index.hbs",
+    "dev": "parcel src/index.hbs --port 3000",
+    "build": "parcel build src/index.hbs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
