--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/pitmak/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars": "^1.0.9",
+    "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
