--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "parcel src/index.hbs --port 3000",
     "build": "parcel build src/index.hbs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
   },
   "engines": {
     "node": ">=12.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
