--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "no-underscore-dangle": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "warn",
+    "linebreak-style": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
