--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "sourceMap": true,
+    "strictNullChecks": true,
     "lib": [
       "ESNext",
       "DOM"
