--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noUnusedParameters": true,
     "sourceMap": true,
     "strictNullChecks": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "lib": [
       "ESNext",
       "DOM"
