--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^28.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.8.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "dependencies": {
     "express": "^4.18.1",
