--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
   "devDependencies": {
     "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
     "@parcel/transformer-sass": "^2.7.0",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "chai": "^4.3.6",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "mocha": "^10.0.0",
     "parcel": "^2.7.0",
     "stylelint": "^14.11.0",
     "stylelint-config-standard": "^28.0.0",
