--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "my first project in Yandex Practicum",
   "scripts": {
-    "dev": "parcel src/index.html --port 3000",
-    "build": "parcel build src/index.html",
-    "start": "npm run build && node server.js"
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "serve": "webpack serve",
+    "start": "node ./server.js",
+    "test": "mocha --require ts-node/register --require mochaSetup.js './src/**/*.test.ts'",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -18,29 +21,46 @@
   },
   "homepage": "https://github.com/pitmak/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
-    "@parcel/transformer-sass": "^2.7.0",
     "@types/chai": "^4.3.3",
+    "@types/jsdom": "^20.0.0",
     "@types/mocha": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@types/proxyquire": "^1.3.28",
+    "@types/sinon": "^10.0.13",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "chai": "^4.3.6",
+    "css-loader": "^6.7.1",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
+    "file-loader": "^6.2.0",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.2",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "jsdom": "^20.0.1",
+    "mini-css-extract-plugin": "^2.6.1",
     "mocha": "^10.0.0",
-    "parcel": "^2.7.0",
-    "stylelint": "^14.11.0",
+    "nanoid": "^3.3.4",
+    "proxyquire": "^2.1.3",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
+    "sinon": "^14.0.1",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.13.0",
     "stylelint-config-standard": "^28.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
-    "typescript": "^4.8.2",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "express": "^4.18.1",
-    "handlebars": "^4.7.7",
-    "nanoid": "^4.0.0"
+    "express-history-api-fallback": "^2.2.1"
   }
 }
